multiple functionalities added